--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
@@ -1,7 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Catalogue &rsaquo; Details for <!-- TMPL_VAR NAME="title" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
+//<![CDATA[
 function Dopop(link) {
     newin=window.open(link,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
 }
@@ -25,6 +26,7 @@ function confirm_deletion(count) {
 		
     }
 }
+//]]>
 </script>
 </head>
 <body>
