--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-password.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-password.tmpl
@@ -6,13 +6,14 @@
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="members-search.inc" -->
 
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/members/members-home.pl">Patrons</a>  &rsaquo; <!-- TMPL_IF NAME="newpassword" -->Password Updated<!-- TMPL_ELSE -->Change Username and/or Password<!-- /TMPL_IF --></div>
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/members/members-home.pl">Patrons</a>  &rsaquo; <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></a> &rsaquo; <!-- TMPL_IF NAME="newpassword" -->Password Updated<!-- TMPL_ELSE -->Change Username and/or Password<!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="circ-toolbar.inc" -->
 
 <!-- TMPL_IF NAME="newpassword" -->
 <h1>Password Updated</h1>
@@ -20,22 +21,22 @@
 <!-- TMPL_ELSE -->
 
 <form method="post" action="/cgi-bin/koha/members/member-password.pl">
-<h1>Change Username and/or Password for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></h1>
 	
 	<!-- TMPL_IF NAME="warn" -->
-		<p>You have entered a User ID that already exists.  Please choose another one.</p>
+		<p class="warning">You have entered a User ID that already exists.  Please choose another one.</p>
 	<!-- /TMPL_IF -->
 
-<p>
-	<label>New UserID:</label>
-	<input type="hidden" name="member" value="<!-- TMPL_VAR NAME="member" -->" />
-	<input name="newuserid" size="20" value="<!-- TMPL_VAR NAME="userid" -->" />
-</p>
-<p>
-	<label>New Password:</label>
-	<input name="newpassword" type="text" size="20" value="<!-- TMPL_VAR NAME="defaultnewpassword" -->" />
-</p>
-<p><input type="submit" value="Confirm Password" /></p>
+
+	<fieldset class="brief"><legend>Change Username and/or Password for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></legend>
+	<ol>
+	<li><label for="newuserid">New Username:</label>
+	<input type="hidden" name="member" value="<!-- TMPL_VAR NAME="member" -->" /><input id="newuserid" name="newuserid" size="20" value="<!-- TMPL_VAR NAME="userid" -->" /></li>
+	<li><label for="newpassword">New Password:</label>
+	<div class="hint">Koha cannot display existing passwords. Below is a randomly generated suggestion</div>
+	<input name="newpassword"  id="newpassword" type="text" size="20" value="<!-- TMPL_VAR NAME="defaultnewpassword" -->" /></li>
+	</ol>
+	<fieldset class="action"><input type="submit" value="Save" /></fieldset>
+</fieldset>
 </form><!-- /TMPL_IF -->
 
 </div>
